.k8s/flaskservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaskservice
  template:
    metadata:
      labels:
        app: flaskservice
    spec:
      containers:
      - name: flaskservice
        image: flaskservice
        ports:
        - containerPort: 5000
