.k8s/reactui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactui
  template:
    metadata:
      labels:
        app: reactui
    spec:
      containers:
      - name: reactui
        image: reactui
        ports:
        - containerPort: 3000
