.k8s/externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-mysql
spec:
  type: ExternalName
  externalName: usermgmtdb.chheppac9ozc.us-east-1.rds.amazonaws.com
