.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-react-app
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
